# SLAy

./: README.md  pyproject.toml  setup.py
burst_detector/: __init__.py  algo.py  autoencoder.py  bursts.py  custom_metrics.py  plot_units.py  run.py  schemas.py  stages.py  utils.py
scripts/: artificial_split.py  as_figure.py  auto_curate.py  auto_slay.py  burst_fig.py  ccg_test.py  ccg_unif_vs_shfl.py  evaluate_si_merging.py  figure_2.py  figure_4.py  supp_figs.ipynb  test_automatic_parameter_selection.py  test_si_slay.py
slay/: Slay_try.ipynb  __init__.py  algo.py  autoencoder.py  bursts.py  cluster_metrics.py  plot.py  plot_units.py  run.py  schemas.py  stages.py  utils.py  xcorr.py
src/slay/: SGLXMetaToCoords.py  __init__.py  algo.py  algorithm.py  artificial_splits.py  autoencoder.py  autoselect_params.py  bursts.py  metrics.py  plot.py  run.py  schemas.py  stages.py  utils.py  xcorr.py
